<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />
    <item android:id="@+id/videos"
        android:title="@string/videos"
android:icon="@drawable/ic_video"
        />
    <item android:id="@+id/images"
        android:title="@string/image"
        android:icon="@drawable/ic_image"
        />
    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        />
    <item android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings"
        />
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"

        />
</menu>